--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <div class="nav-bar">
         <div class="logo">Snapshot</div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
 
     <!-- Hero section -->
 
-    <div class="hero-section">
+    <div id="home" class="hero-section">
         <div class="hero-content-heading">
             <h3>Let's take a snapshot</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero beatae quod molestias voluptas nam <br> facere numquam quos pariatur repellendus excepturi!</p>
@@ -31,7 +31,7 @@
     </div>
 
     <!-- sub-hero section -->
-    <div class="hero-background">
+    <div id="about" class="hero-background">
         <div class="background">
             <h4>Background</h4>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus sint ab rerum obcaecati totam neque quam corrupti dolores? Ipsam tempora consequatur quaerat. Voluptates accusamus molestiae nulla sapiente explicabo tempore possimus?</p>
@@ -60,7 +60,7 @@
     </div>
 
     <!-- Gallery section -->
-    <div class="gallery-section">
+    <div id="gallery" class="gallery-section">
         <div class="gallery-content">
             <h4>Gallery</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, sapiente. Nullae rem!</p>
@@ -86,7 +86,7 @@
     </div>
 
     <!-- Footer section -->
-    <div class="footer">
+    <div id="conact" class="footer">
         <div class="footer-content">
             <h4>Send a  message</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, sapiente. Nuleos rem!</p>
